# esp-idf_rust_example_gatts

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
src/: consts.rs  gatts_profile_inst.rs  lib.rs  main.rs  prepare_type_env.rs
